--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <div class="button-group mt-5">
+  <div class="button-group mt-5 pt-4">
     <%= form.submit "Enviar retroalimentación", class: "form__button-submit", id: "add-button" %>
     <%= link_to "Regresar", :back, class: "form__button-back" %>
   </div>
