--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -11,7 +11,7 @@ $gray-color: #A9A9A9;
 $light-gray: #ececec;
 $dark-gray: #5e5e5e;
 
-$success-color: #4CAF50;
+$success-color: #37a13b;
 $warning-color: #e6a226;
 $danger-color: #c92a19;
 
