--- a/app/views/user_accounts/show.html.erb
+++ b/app/views/user_accounts/show.html.erb
@@ -32,6 +32,6 @@
       </div>
     </div>
 
-    <%= link_to "Regresar", :back, class: "form__button-back" %>
+    <%= link_to "Regresar", :back, class: "form__button-back mt-5" %>
   </div>
 </main>
