--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,30 +1,20 @@
-<%= render @request %>
-<div class="mt-3 mb-3 ">
-  <div class="position-relative mt-3">
-    <% if !current_user_account %>
-      <div class="d-flex justify-content-center">
-        <div class="btn-group">
-          <%= link_to root_path, class: "btn btn-primary" do %>
-            <i class="bi bi-arrow-bar-left"></i>
-            Volver
-          <% end %>
-          <% if @request.feedback.nil? && @request.status == "closed" %>
-            <%= link_to new_feedback_path(:request_id => @request.hashid), class: "btn btn-primary" do %>
-              <i class="bi bi-clipboard2"></i>
-              Agregar feedback
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-    <% else %>
-      <% if current_user_account.role == "admin" %>
-        <%= render 'requests/admin_views/request_log' %>
+<main class="main">
+  <div class="container form">
+    <h1 class="form__heading">Estado de solicitud</h1>
+    <hr class="mb-3">
+
+    <%= render @request %>
+
+    <div class="button-group">
+      <% if !current_user_account %>
+        <%= link_to "Agregar retroalimentación", new_feedback_path(:request_id => @request.hashid), class: "form__button-submit" %>
       <% end %>
-      <div class="d-flex justify-content-center">
-        <div class="btn-group">
-          <%= link_to "Regresar", :back, class: "btn btn-primary" %>
-        </div>
-      </div>
-    <% end %>
+
+      <% if @request.status == "pending" && current_user_account %>
+        <%= link_to "Atender", change_status_request_path(request), class: "form__button-submit" %>
+      <% end %>
+
+      <%= link_to "Regresar", current_user_account ? current_user_account.role == "admin" ? requests_path(:status => "pending") : requests_path(:status => "in_process") : root_path, class: "form__button-back" %>
+    </div>
   </div>
-</div>
+</main>
