--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -24,6 +24,7 @@
     display: grid;
     grid-template-columns: repeat($columns, 1fr);
     column-gap: $spacing;
+    row-gap: 1rem;
 }
 
 // BUTTON
@@ -43,11 +44,11 @@
     -moz-border-radius: v.$border-radius-sm;
     -ms-border-radius: v.$border-radius-sm;
     -o-border-radius: v.$border-radius-sm;
-    transition: v.$hover-transition-2;
-    -webkit-transition: v.$hover-transition-2;
-    -moz-transition: v.$hover-transition-2;
-    -ms-transition: v.$hover-transition-2;
-    -o-transition: v.$hover-transition-2;
+    transition: v.$hover-transition-1;
+    -webkit-transition: v.$hover-transition-1;
+    -moz-transition: v.$hover-transition-1;
+    -ms-transition: v.$hover-transition-1;
+    -o-transition: v.$hover-transition-1;
 
     &:hover {
         cursor: pointer;
