--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -23,7 +23,6 @@
         }
 
         > :nth-child(4) {
-            margin-top: -2rem;
             grid-column: 1 / 5;
 
             @include m.desktop {
@@ -31,7 +30,7 @@
                 align-items: center;
                 display: flex;
                 justify-content: flex-end;
-                margin: -4rem 0 2rem;
+                margin: 0 0 2rem;
             }
         }
     }
