--- a/app/views/tasks/admin_views/_admin_view.html.erb
+++ b/app/views/tasks/admin_views/_admin_view.html.erb
@@ -1,33 +1,11 @@
 <% if @request.status != "completed" && @request.status != "closed" %>
-  <div id="add-employees" class="m-3 mh-25">
-    <h5>Asignar trabajadores:</h5>
+  <div id="remove-employees">
+    <h3 class="form__subheading form__subheading--table text-left fw-normal">Trabajadores asignados</h3>
+    <%= render "/tasks/admin_views/employee_list", task: @task, request: @request, list_type: "remove" %>
+  </div>
+
+  <div id="add-employees" class="mt-5 pt-2">
+    <h3 class="form__subheading form__subheading--table text-left fw-normal">Trabajadores no asignados</h3>
     <%= render "/tasks/admin_views/employee_list", task: @task, request: @request, list_type: "add" %>
-  </div>
-<% end %>
-<div id="remove-employees" class="m-3 mh-25">
-  <% if @request.status != "completed" && @request.status != "closed" %>
-    <h5>Remover trabajadores:</h5>
-  <% else %>
-    <h5>Trabajadores asignados:</h5>
-  <% end %>
-  <%= render "/tasks/admin_views/employee_list", task: @task, request: @request, list_type: "remove" %>
-</div>
-<div class="m-3 mh-25">
-  <h5>Observaciones:</h5>
-  <%= render 'tasks/shared_views/observations' %>
-</div>
-<div class="m-3 mh-25">
-  <h5>Historial de cambios:</h5>
-  <%= render 'requests/admin_views/request_log' %>
-</div>
-<% if @request.status == "completed" %>
-  <div class="m-3 mh-25">
-    <h5>Reabrir solicitud:</h5>
-    <div class="container mt-3 mb-3 p-4 border border-2 rounded-3">
-      <%= render 'requests/admin_views/request_reasons', request: @request, type: "reopen" %>
-    </div>
-  </div>
-  <div class="container m-2">
-    <%= link_to "Cerrar solicitud", change_status_request_path(@request, :change_to => "close"), class: "btn btn-primary" %>
   </div>
 <% end %>
