--- a/app/views/requests/_request_list.html.erb
+++ b/app/views/requests/_request_list.html.erb
@@ -22,11 +22,11 @@
 
           <td class="form__table-data">
             <div class="form__table-buttons">
-              <%= link_to request, class: "form__table-button-view form__table-button--desktop" do %>
+              <%= link_to request, class: "form__button-view form__button--desktop" do %>
                 <i class="bi bi-eye"></i>&nbsp;Ver
               <% end %>
 
-              <%= link_to request, class: "form__table-button-view form__table-button--mobile" do %>
+              <%= link_to request, class: "form__button-view form__button--mobile" do %>
                 <i class="bi bi-eye"></i>
               <% end %>
               
