--- a/app/views/requests/employee_views/_employee_request_actions.html.erb
+++ b/app/views/requests/employee_views/_employee_request_actions.html.erb
@@ -1,18 +1,18 @@
 <% case request.status
     when "in_process" %>
-  <%= link_to edit_task_path(request: request), class: "form__table-button-toggle form__table-button--desktop" do %>
+  <%= link_to edit_task_path(request: request), class: "form__button-toggle form__button--desktop" do %>
     <i class="bi bi-pencil-square"></i>&nbsp;Atender
   <% end %>
 
-  <%= link_to edit_task_path(request: request), class: "form__table-button-toggle form__table-button--mobile" do %>
+  <%= link_to edit_task_path(request: request), class: "form__button-toggle form__button--mobile" do %>
     <i class="bi bi-pencil-square"></i>
   <% end %>
 
   <!--<%= link_to "Finalizar", change_status_request_path(request),
-              class: "form__table-button-toggle form__table-button--desktop",
+              class: "form__button-toggle form__button--desktop",
               data: { turbo_method: :get, turbo_confirm: "¿Está seguro(a)?, esta acción es irreversible" } %>
 
-  <%= link_to "#", class: "form__table-button-toggle form__table-button--mobile" do %>
+  <%= link_to "#", class: "form__button-toggle form__button--mobile" do %>
     <i class="bi bi-check-square"></i>
   <% end %>-->
 <% end %>
