--- a/app/views/user_accounts/_employee_list.html.erb
+++ b/app/views/user_accounts/_employee_list.html.erb
@@ -20,17 +20,17 @@
 
           <td class="form__table-data">
             <div class="form__table-buttons">
-                <%= link_to employee, class: "form__table-button-view form__table-button--desktop" do %>
+                <%= link_to employee, class: "form__button-view form__button--desktop" do %>
                   <i class="bi bi-eye"></i>&nbsp;Ver
                 <% end %>
-                <%= button_to change_status_user_account_path(employee), class: "form__table-button-toggle form__table-button--desktop", method: :put, data: { turbo_method: :delete, turbo_confirm: "¿Desea cambiar el estado de este usuario?" } do %>
+                <%= button_to change_status_user_account_path(employee), class: "form__button-toggle form__button--desktop", method: :put, data: { turbo_method: :delete, turbo_confirm: "¿Desea cambiar el estado de este usuario?" } do %>
                   <i class="bi bi-toggles"></i>&nbsp;Cambiar estado
                 <% end %>
             
-                <%= link_to employee, class: "form__table-button-view form__table-button--mobile" do %>
+                <%= link_to employee, class: "form__button-view form__button--mobile" do %>
                   <i class="bi bi-eye"></i>
                 <% end %>
-                <%= button_to change_status_user_account_path(employee), class: "form__table-button-toggle form__table-button--mobile", method: :put, data: { turbo_method: :delete, turbo_confirm: "¿Desea cambiar el estado de este usuario?" } do %>
+                <%= button_to change_status_user_account_path(employee), class: "form__button-toggle form__button--mobile", method: :put, data: { turbo_method: :delete, turbo_confirm: "¿Desea cambiar el estado de este usuario?" } do %>
                   <i class="bi bi-toggles"></i>
                 <% end %>
             </div>    
