--- a/app/views/requests/admin_views/_request_reasons.html.erb
+++ b/app/views/requests/admin_views/_request_reasons.html.erb
@@ -1,48 +1,33 @@
-<%= form_with(model: request, local: true, data: { turbo_method: :delete, turbo_confirm: "¿Rechazar esta solicitud?" }) do |f| %>
-  <div data-controller="nested-form">
-    <% if type == "deny" %>
-      <h4>Razones para rechazar:</h4>
-    <% else %>
-      <h4>Razones para reabrir:</h4>
-    <% end %>
-    <div class="container m-3">
-      <div class="m-3">
-        <% if type == "deny" %>
-          <%= select_tag "reasons", options_for_select(@dictionary.denyReasons.invert.each), class: "form-select" %>
-        <% else %>
-          <%= select_tag "reasons", options_for_select(@dictionary.reopenReasons.invert.each), class: "form-select" %>
-        <% end %>
-      </div>
-      <div data-nested-form-target="add_item">
-        <%= link_to "#", data: { action: "nested-form#add_association" }, class: "btn btn-sm btn-primary" do %>
-          <i class="bi bi-plus"></i>
-          Agregar razón
-        <% end %>
-      </div>
-    </div>
+<%= form_with(model: request, local: true, data: { turbo_method: :delete, turbo_confirm: "¿Está seguro(a) que desea realizar esta acción?" }) do |f| %>
+<div data-controller="nested-form" class="form__input">
+  <%= f.label type == "deny" ? "Razones de rechazo" : "Razones de reapertura", class: "form__input-label" %>
 
+  <div class="request-reasons__flex">
+    <%= select_tag "reasons", options_for_select(type == "deny" ? @dictionary.denyReasons.invert.each : @dictionary.reopenReasons.invert.each), class: "form__input-select" %>
+    
     <div>
-      <template data-nested-form-target="template">
-        <%= f.fields_for (type == "deny" ? :request_deny_reasons : :reopen_reasons), type == "deny" ? RequestDenyReason.new : ReopenReason.new, child_index: "TEMPLATE_RECORD" do |reason| %>
-          <div class="container m-3">
-            <%= render "requests/admin_views/reason_fields", f: reason, request: request %>
-        <% end %>
-        </div>
-      </template>
-    </div>
-    <div class="container m-3">
-      <%= f.fields_for (type == "deny" ? :request_deny_reasons : :reopen_reasons) do |reason| %>
-        <div class="container m-3">
-          <%= render "requests/admin_views/reason_fields", f: reason, request: request %>
-        </div>
+      <%= link_to "#", data: { action: "nested-form#add_association" }, class: "form__button-submit" do %>
+        Agregar
       <% end %>
     </div>
   </div>
-  <%= button_tag(class: "btn btn-primary") do %>
-    <% if type == "deny" %>
-      Rechazar solicitud
-    <% else %>
-      Reabrir solicitud
+  <div>
+
+  <span data-nested-form-target="add_item"></span>
+
+  <template data-nested-form-target="template">
+    <%= f.fields_for (type == "deny" ? :request_deny_reasons : :reopen_reasons), type == "deny" ? RequestDenyReason.new : ReopenReason.new, child_index: "TEMPLATE_RECORD" do |reason| %>
+      <%= render "requests/admin_views/reason_fields", f: reason, request: request %>
     <% end %>
+  </template>
+
+  <%= f.fields_for (type == "deny" ? :request_deny_reasons : :reopen_reasons) do |reason| %>
+    <%= render "requests/admin_views/reason_fields", f: reason, request: request %>
   <% end %>
+</div>
+
+<%= button_tag(class: "form__button-submit") do %>
+  <% type == "deny" ? "Rechazar solicitud" : "Reabrir solicitud" %>
+<% end %>
+
 <% end %>
